fix reviews bottom alignment

--- a/styles/EventPage.scss
+++ b/styles/EventPage.scss
@@ -48,7 +48,7 @@
 }
 
 .reviewContainer {
-  margin-top: 100px;
+  margin: 100px 0;
   .reviewInputWrap {
     margin-top: 50px;
     .rating {
